--- a/examples/makefile
+++ b/examples/makefile
@@ -1,8 +1,20 @@
 all:
 	(cd ms3dinfo; make)
 	(cd raytrace; make)
+	(cd testimage; make)
 	(cd testkdtree; make)
 	(cd testmatrix; make)
 	(cd testparsemap; make)
 	(cd testplanarvolume; make)
 	(cd testtga; make)
+
+clean:
+	(cd ms3dinfo; make clean)
+	(cd raytrace; make clean)
+	(cd testimage; make clean)
+	(cd testkdtree; make clean)
+	(cd testmatrix; make clean)
+	(cd testparsemap; make clean)
+	(cd testplanarvolume; make clean)
+	(cd testtga; make clean)
+
